Bug 506765 - 10 second timeout to confirm pen calibration is too short
Summary: 10 second timeout to confirm pen calibration is too short
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_tablet (other bugs)
Version First Reported In: 6.4.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-08 15:23 UTC by Jillian Morgan
Modified: 2025-08-01 18:56 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jillian Morgan 2025-07-08 15:23:27 UTC
SUMMARY

After calibrating the drawing tablet, touching all 4 points, one is asked to touch all 4 points again to verify the calibration. This step only allows 10 seconds to complete the verification before the process is aborted and one has to start all over again. This is not enough time to accurately complete the verification step before it is prematurely aborted.

STEPS TO REPRODUCE
1. Begin pen calibration
2. touch all 4 points
3. begin re-touching all 4 points to verify
4. see process aborted because it took longer than 10 seconds to complete the verification

OBSERVED RESULT

Verification step of the calibration process was terminated unnecessarily early, while the verification was proceeding normally.

EXPECTED RESULT

Either: a) reset the 10-second countdown after each point is touched (thereby giving about 40 seconds to complete the whole process), or b) give a much longer countdown (say 60 seconds), or c) don't use a countdown at all!

The initial part of the calibration process has no countdown or time limit. Why should the verification step require one to be super speedy and likely make the verification fail due to trying to be so fast as to make inaccurate inputs? There's always the cancel button if one needs to abort the process manually.

If this process is challenging for me to complete in 10 seconds, I can't imagine how impossible it would be for someone with an accessibility issue.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 42
KDE Plasma Version: 6.4.2
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1

ADDITIONAL INFORMATION
Comment 1 Joshua Goins 2025-07-09 15:08:21 UTC
> The initial part of the calibration process has no countdown or time limit. Why should the verification step require one to be super speedy and likely make the verification fail due to trying to be so fast as to make inaccurate inputs? There's always the cancel button if one needs to abort the process manually.

The reason why we have a countdown is because there was multiple bug reports of people creating invalid calibration settings and couldn't figure out how to reset it. The point of the verification is to ensure the user consciously accepts that the calibration works, and it hopefully avoids the annoying "i can't do pen inputs anymore" state entirely.

But the countdown *is* too short as I just picked a number, and should be extended.
Comment 2 Bug Janitor Service 2025-07-30 21:28:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3128
Comment 3 Joshua Goins 2025-08-01 18:56:26 UTC
Git commit f5a7a747eccce28df7cfd31496892ab212204cb4 by Joshua Goins.
Committed on 01/08/2025 at 18:56.
Pushed by redstrate into branch 'master'.

kcms/tablet: Lengthen the calibration reset timer to 15 seconds

This matches the timeout in KScreen. In my opinion, 15 seconds is still
too short for this I made it so on every tap it resets the timer. This
should give users plenty of breathing room not to rush it.
FIXED-IN: 6.5.0

M  +9    -2    kcms/tablet/calibrationtool.cpp
M  +3    -0    kcms/tablet/calibrationtool.h
M  +1    -1    kcms/tablet/ui/Calibration.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/f5a7a747eccce28df7cfd31496892ab212204cb4