kcms/tablet: Lengthen the calibration reset timer to 15 seconds

This matches the timeout in KScreen. In my opinion, 15 seconds is still
too short for this I made it so on every tap it resets the timer. This
should give users plenty of breathing room not to rush it.

BUG: 506765
FIXED-IN: 6.5.0